<resources>
    <string name="app_name">covid 19</string>
    <string name="scan_x_ray">Scan X-Ray</string>
    <string name="actions">ACTIONS</string>
    <string name="symptoms_test">Symptom test</string>
    <string name="questions">Questions</string>
    <string name="covid">COVID-19</string>
    <string name="temp_question">Is your age greater than 40?</string>
    <string name="title_activity_home">home</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="uploadImage">UPLOAD IMAGE</string>
    <string name="clickPicture">CLICK PICTURE</string>
    <string name="selectPicture">SELECT PICTURE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
