<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/black"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/actionCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/take_action_background"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/actions"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/QuizButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/white_rounded_background"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/symptoms_test"
            android:textColor="@color/light_gray_font" />

        <Button
            android:id="@+id/xrayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/white_rounded_background"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/scan_x_ray"
            android:textColor="@color/light_gray_font" />
    </LinearLayout>


</LinearLayout>